--- a/client/src/App.css
+++ b/client/src/App.css
@@ -35,3 +35,19 @@ img {
 .post{
   background-color: blueviolet;
 }
+
+.btn {
+  background-color: #555555; /* Green */
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  cursor: pointer;
+}
+.btn:hover{
+  background-color: white;
+  color:#555555;
+}
